--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -1,10 +1,6 @@
-.todo-list {
+.todo_list {
     margin: 1rem;
     padding: 1rem;
     margin-top: 0;
     padding-top: 0;
-}
-
-.todo-list ul {
-    list-style-type: none;
 }
